# midori-vpn-desktop

./: .env.example  .gitignore  CHANGELOG.md  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
agent/: go.mod  go.sum
docs/: desktop-security-refactor-optimization.md
packaging/apparmor/: usr.local.bin.midorivpn-agent
packaging/autostart/: midorivpn.desktop
packaging/launcher/: midorivpn.desktop
packaging/maintainer/: postinst  prerm
packaging/selinux/: midorivpn.fc  midorivpn.te
scripts/: build-agent.sh  build-local-appimage.sh  cargo-audit.sh  extract-release-notes.sh  govulncheck.sh  install-security-tools.sh  npm-audit.sh  run-local-appimage.sh  tauri-build.sh  verify-tauri-resources.mjs
src/: App.vue  env.d.ts  main.ts
src-tauri/: Cargo.toml  audit.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/polkit/: 49-midorivpn.rules  org.astian.midorivpn.policy
src-tauri/src/: agent.rs  autostart.rs  http_client.rs  lib.rs  main.rs  security.rs  tray.rs
src-tauri/src/agent/: events.rs  permissions.rs  process.rs  supervisor.rs  token.rs
src/__tests__/: AuthSection.spec.ts  PermissionsTriggerCard.spec.ts  format.test.ts  i18n.test.ts  mesh.store.test.ts  meshValidation.test.ts  protection.store.test.ts  vpn.store.test.ts
src/assets/: style.css
src/components/: LanguageSelect.vue  PermissionsConsentModal.vue  QuitButton.vue
(+83 files in other folders)
