[package]
name = "midorivpn-desktop"
version = "1.0.0"
edition = "2021"

[lib]
name = "midorivpn_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "midorivpn-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
